--- a/style.css
+++ b/style.css
@@ -1,82 +1,89 @@
-    body {
-        margin: 0;
-        font-family: 'Bowlby One SC', cursive;
-    }
-    
-    table {
-        margin: 20px auto;
-        transition: 1.5s;
-    }
-    
-    h1 {
-        text-align: center;
-        color: white;
-        margin: 0 auto;
-        background-color: steelblue;
-        letter-spacing: 5px;
-        font-size: 70px;
-        font-weight: 600;
-        padding-bottom: 20px;
-        line-height: 0.8;
-        /* text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue; */
-        text-shadow: 2px 2px 4px #000000;
-    }
-    
-    td {
-        width: 100px;
-        height: 100px;
-        border: 5px solid steelblue;
-        text-align: center;
-        font-family: 'Permanent Marker', cursive;
-        font-size: 60px;
-        border-radius: 30%;
-        color: rgb(19, 19, 61);
-        /* box-shadow: 3px 3px 3px grey; */
-        transition: 0.3s;
-    }
-    
-    div {
-        text-align: center;
-        background-color: white;
-        border-bottom: 2px solid steelblue;
-        font-size: 20px;
-    }
-    
-    button {
-        border: none;
-        background: no-repeat;
-        height: 100%;
-        font-family: 'Bowlby One SC', cursive;
-        color: steelblue;
-        font-size: 20px;
-        transition: background-color 0.3s, color 0.6s;
-    }
-    
-    #blank {
-        display: inline-block;
-        width: 8%;
-    }
-    
-    #msg {
-        display: inline-block;
-        width: 30%;
-        color: rgb(19, 19, 61);
-    }
-    
-    td:hover {
-        background-color: steelblue;
-    }
-    
-    button:hover {
-        background-color: steelblue;
-        color: white;
-    }
-    
-    .mode {
-        background-color: steelblue;
-        color: white;
-    }
-    
-    .win {
-        background-color: steelblue;
-    }
+        body {
+            margin: 0;
+            font-family: 'Bowlby One SC', cursive;
+        }
+        
+        table {
+            margin: 20px auto;
+            transition: 1.5s;
+            border-spacing: 5px;
+        }
+        
+        h1 {
+            text-align: center;
+            color: white;
+            margin: 0 auto;
+            background-color: steelblue;
+            letter-spacing: 5px;
+            font-size: 70px;
+            font-weight: 600;
+            padding-bottom: 20px;
+            line-height: 0.8;
+            text-shadow: 2px 2px 4px #000000;
+        }
+        
+        td {
+            width: 100px;
+            height: 100px;
+            border: 5px solid steelblue;
+            text-align: center;
+            font-family: 'Permanent Marker', cursive;
+            font-size: 60px;
+            border-radius: 20%;
+            color: rgb(19, 19, 61);
+            box-shadow: 3px 3px 3px grey;
+            transition: 0.5s;
+        }
+        
+        div {
+            text-align: center;
+            background-color: white;
+            border-bottom: 2px solid steelblue;
+            font-size: 20px;
+        }
+        
+        button {
+            border: none;
+            background: no-repeat;
+            height: 100%;
+            font-family: 'Bowlby One SC', cursive;
+            color: steelblue;
+            font-size: 20px;
+            transition: background-color 0.3s, color 0.6s;
+        }
+        
+        #blank {
+            display: inline-block;
+            color: rgb(19, 19, 61);
+            width: 26%;
+        }
+        
+        #msg {
+            display: inline-block;
+            width: 30%;
+            color: rgb(19, 19, 61);
+        }
+        
+        td:hover {
+            background-color: steelblue;
+        }
+        
+        button:hover {
+            background-color: steelblue;
+            color: white;
+        }
+        
+        .mode {
+            background-color: steelblue;
+            color: white;
+        }
+        
+        .win {
+            background-color: steelblue;
+        }
+        
+        h2 {
+            font-size: 15px;
+            text-align: right;
+            letter-spacing: 1px;
+        }
